--- a/apps/frontend/src/styles/globals.css
+++ b/apps/frontend/src/styles/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-acme);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -45,7 +45,10 @@
 }
 
 :root {
-  --color-title: #21284b;
+  --color-title: #d6d8e2;
+  --button-color1: #002fff;
+  --button-color1-hover: #00ffea;
+  --button-color2: #e8c4b2;
   --radius: 0.625rem;
   --background: #e9e9e9;
   --foreground: #000000;
@@ -82,9 +85,26 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50 ;
+    @apply border-border outline-ring/50;
   }
   body {
     @apply bg-background text-foreground text-base;
+    font-family: var(--font-acme), sans-serif;
+  }
+}
+.button-color1 {
+  background-color: rgb(59, 130, 246);
+  &:hover {
+    background-color: rgb(137, 168, 235);
+  }
+}
+
+@layer utilities {
+  .debug * {
+    @apply outline outline-blue-500;
+  }
+
+  .text-link {
+    color: rgb(37, 165, 86);
   }
 }
